add funcionalidades de creacion de productos, obtener productos, y se documentaron endpoints con swagger
